:icons: font

= Gentics Mesh Changelog

== 0.9.17 (TBD)

icon:plus[] Core: The internal transaction handling has been refactored.

icon:plus[] Core: The Vert.x core dependency was updated to version 3.4.2

icon:plus[] API: The version field of node responses and publish status responses are now strings instead of objects containing the version number.

== 0.9.16 (19.06.2017)

icon:plus[] Documentation: Huge documentation update.

== 0.9.15 (19.06.2017)

icon:check[] GraphQL: Fixed loading tags for nodes.

== 0.9.14 (09.06.2017)

icon:check[] WebRoot: Bugs within the permission handling have been fixed. It is now possible to load nodes using only the *read_published* permission. This permission was previously ignored.

icon:check[] GraphQL: An introspection bug which prevented graphiql browser autocompletion from working correctly has been fixed. The bug did not occur on systems which already used microschemas. 

== 0.9.13 (08.06.2017)

icon:check[] UI: The UI was updated. An file upload related bug was fixed.

icon:check[] UI: Schema & Microschema description is no longer a required field.

== 0.9.12 (08.06.2017)

icon:check[] GraphQL: Fixed handling of node lists within micronodes.

icon:check[] GraphQL: Fixed Micronode type not found error.

icon:check[] GraphQL: Fixed GraphQL API for system which do not contain any microschemas.

icon:check[] GraphQL: Fixed permission handling and filtering when dealing with node children.

== 0.9.11 (07.06.2017)

icon:plus[] GraphQL: The GraphQL library was updated. Various GraphQL related issues have been fixed.

== 0.9.10 (29.05.2017)

icon:plus[] Schemas: The default content and folder schemas have been updated. The `fileName` and `folderName` fields have been renamed to `slug`. The `name` field was removed from the content schema and a `teaser` field has been added.
These changes are optional and thus not automatically applied to existing installations.
