@@ -4,6 +4,8 @@
 
 == 0.9.17 (TBD)
 
+icon:plus[] Server: The Mesh UI was added to the mesh-server jar.
+
 icon:plus[] Core: The internal transaction handling has been refactored.
 
 icon:plus[] Core: The Vert.x core dependency was updated to version 3.4.2
